--- a/backend/todoneo/src/main/resources/application.yaml
+++ b/backend/todoneo/src/main/resources/application.yaml
@@ -1,3 +1,19 @@
 spring:
   application:
     name: todoneo
+
+  datasource:
+    url: jdbc:postgresql://localhost:5433/todoneo_db
+    username: postgres
+    password: admin
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    show-sql: true
+    open-in-view: false
+    hibernate:
+      ddl-auto: validate
+
+server:
+  port: 8080
+  shutdown: graceful
