--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       POSTGRES_DB: todoneo_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
+      TZ: America/Argentina/Buenos_Aires
     volumes:
       - ./db/init:/docker-entrypoint-initdb.d
       - todoneo-pgdata:/var/lib/postgresql/data
